# impl_variadics

./: Cargo.toml  LICENSE  README.md
examples/: alias.rs  test.rs
src/: custom_ident.rs  format.rs  lib.rs
