[package]
name = "impl_variadics"
version = "0.1.1"
edition = "2021"
description = "a macro to generate repetitive idents etc. usually used to implement trait for tuples."
license = "MIT"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
