[package]
name = "impl_variadics"
version = "0.1.2"
edition = "2021"
description = "a macro to generate repetitive idents etc. usually used to implement trait for tuples."
license-file = "LICENSE"
authors = ["fancyflame"]
repository = "https://github.com/Fancyflame/impl_variadics"
keywords = ["variadics", "tuple", "macro", "macros", "generics"]
categories = ["development-tools"]

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
